# nimavv

./: .gitignore  .gvbyh-server-uuid  .文本文件.txt.kate-swp  Cargo.toml  build-openwrt.sh  build.sh  check-worker-domain.sh  config.example.toml  deploy-worker.sh  download-geoip.sh  fix-worker-domain.sh  rust-toolchain.toml  setup-tproxy.sh  start.sh  test-config.toml  test-fix.sh  test-tproxy.sh  test-worker.sh  test_features.sh  test_geoip.sh  update-rules.sh  verify-changes.sh  文本文件.txt
.github/workflows/: build.yml
bins/client/: Cargo.toml
bins/client/src/: main.rs  socks5.rs
bins/server/: Cargo.toml
bins/server/src/: main.rs
core/: Cargo.toml
core/src/: buffer.rs  crypto.rs  lib.rs  protocol.rs  zerocopy.rs
router/: Cargo.toml
router/src/: lib.rs
transport/: Cargo.toml
transport/src/: batch.rs  dns.rs  lib.rs  metrics.rs  nat.rs  pool.rs  pool_optimized.rs  quic.rs  tcp_optimize.rs  tproxy.rs
worker/: Cargo.toml  wrangler.toml
worker-client/: Cargo.toml
worker-client/src/: lib.rs
worker/src/: lib.rs
