[package]
name = "gvbyh-core"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
aes-gcm.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
rand = "0.8"
typenum = "1.17"
crossbeam.workspace = true
once_cell.workspace = true

[features]
default = []
simd = ["aes-gcm/aes"]
