[package]
name = "gvbyh-transport"
version.workspace = true
edition.workspace = true

[dependencies]
gvbyh-core = { path = "../core" }
gvbyh-router = { path = "../router" }
gvbyh-worker-client = { path = "../worker-client" }
tokio.workspace = true
tokio-util.workspace = true
quinn.workspace = true
rustls.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
tracing.workspace = true
socket2.workspace = true
trust-dns-resolver.workspace = true
trust-dns-proto = "0.23"
x25519-dalek.workspace = true
libc = "0.2"
serde_json.workspace = true
serde.workspace = true
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
prometheus = { version = "0.13", features = ["process"] }
warp = "0.3"

[features]
default = ["tproxy", "dns", "metrics"]
tproxy = []
dns = []
metrics = []
