[package]
name = "gvbyh-worker-client"
version.workspace = true
edition.workspace = true

[dependencies]
gvbyh-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rustls.workspace = true
tracing.workspace = true
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
base64 = "0.22"
sha2.workspace = true
webpki-roots = "0.26"
