[package]
name = "gvbyh-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gvbyh-server"
path = "src/main.rs"

[dependencies]
gvbyh-core = { path = "../../core" }
gvbyh-worker-client = { path = "../../worker-client" }

tokio = { workspace = true, features = ["signal", "process", "io-util"] }
quinn.workspace = true
rustls.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
x25519-dalek.workspace = true
rand = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
rcgen = "0.13"
hex = "0.4.3"
